--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@ main {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #200069;
+  background-color: #006269;
   padding: 0 1.5rem;
 }
 
@@ -48,7 +48,7 @@ main {
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active {
-  color: #3b4bff;
+  color: #ffd13b;
 }
 
 .grid {
