--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -21,7 +21,11 @@
                             <p class="product__description">$<%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
+                            <a href="/admin/edit-product"  class="btn">edit</a> 
+                            
+                            <form action="/admin/delete-product" method="POST">
+                            <button class="btn">delete</button>
+                            </form> 
                         </div>
                     </article>
                 <% } %>
