--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -17,8 +17,10 @@
                             <img src="<%= product.imageURL %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price"><%= product.price %></h2>
-                            <p class="product__description">$<%= product.description %></p>
+                            <h2 class="product__price">$<%= product.price %></h2>
+                        </div>
+                        <div>
+                            <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
                             <button class="btn">Add to Cart</button>
