--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,7 +1,16 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/product.css">
 </head>
 <body>
     <%- include('../includes/navigation.ejs') %>
-    <main>
+    <main class="centered">
+<h1><%= product.title %></h1>
+    <hr>
+<div>
+    <img  src="<%=product.imageURL  %>" alt="<%= product.title %>" class="cimage">
+</div>
+<h2>$<%= product.price %></h2>
+<p><%= product.description %></p>
+<form action="/cart" method="POST"></form>
+<button class="btn" type="submit">Add to Cart</button>
+    </main> 
 <%- include('../includes/end.ejs') %>
