--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -9,7 +9,7 @@
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
-                    <article class="card product-item">
+                    <article class="card product-item"
                         <header class="card__header">
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
@@ -18,10 +18,14 @@
                         </div>
                         <div class="card__content">
                             <h2 class="product__price"><%= product.price %></h2>
-                            <p class="product__description">$<%= product.description %></p>
+                            <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
+                            <a href="/products/<%=product.id %>" class="btn ">details</a>
+                            <form action="/add-to-cart" method="POST">
                             <button class="btn">Add to Cart</button>
+                            </form>
+
                         </div>
                     </article>
                 <% } %>
